// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a success notification with no message correctly 1`] = `
<li
  className="components-notifications-notification-m__container-success components-notifications-notification-m__container"
  role="alert"
>
  <CloseButton
    ariaLabel="Close venue events viewer"
    onClick={[Function]}
    type="success"
  />
  <h4
    className="components-notifications-notification-m__title"
  >
    The Title
  </h4>
</li>
`;

exports[`should render an error notification with no title correctly 1`] = `
<li
  className="components-notifications-notification-m__container-error components-notifications-notification-m__container"
  role="alert"
>
  <CloseButton
    ariaLabel="Close venue events viewer"
    onClick={[Function]}
    type="error"
  />
  <p
    className="components-notifications-notification-m__message"
  >
    The Message
  </p>
</li>
`;
